--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -44,6 +44,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="test_model.cpp" />
+    <ClCompile Include="test_util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
