--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="test_util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_built_in_functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
