--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="test_role_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_model_enforcer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
