--- a/casbin/casbin.vcxproj.filters
+++ b/casbin/casbin.vcxproj.filters
@@ -222,9 +222,6 @@
     <ClCompile Include="persist\file_adapter\file_adapter.cpp">
       <Filter>Source Files\persist\file_adapter</Filter>
     </ClCompile>
-    <ClCompile Include="persist\file_adapter\filtered_adapter.cpp">
-      <Filter>Source Files\persist\file_adapter</Filter>
-    </ClCompile>
     <ClCompile Include="persist\adapter.cpp">
       <Filter>Source Files\persist</Filter>
     </ClCompile>
@@ -255,6 +252,9 @@
     <ClCompile Include="ip_parser\parser\parseIPv4.cpp">
       <Filter>Source Files\ip_parser\parser</Filter>
     </ClCompile>
+    <ClCompile Include="persist\file_adapter\filtered_file_adapter.cpp">
+      <Filter>Source Files\persist\file_adapter</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config\config_interface.h">
@@ -270,9 +270,6 @@
       <Filter>Header Files\effect</Filter>
     </ClInclude>
     <ClInclude Include="persist\adapter.h">
-      <Filter>Header Files\persist</Filter>
-    </ClInclude>
-    <ClInclude Include="persist\adapter_filtered.h">
       <Filter>Header Files\persist</Filter>
     </ClInclude>
     <ClInclude Include="persist\watcher.h">
@@ -416,9 +413,6 @@
     <ClInclude Include="duktape\pch.h">
       <Filter>Header Files\duktape</Filter>
     </ClInclude>
-    <ClInclude Include="persist\file-adapter\filtered_adapter.h">
-      <Filter>Header Files\persist\file_adapter</Filter>
-    </ClInclude>
     <ClInclude Include="effect\default_effector.h">
       <Filter>Header Files\effect</Filter>
     </ClInclude>
@@ -466,6 +460,12 @@
     </ClInclude>
     <ClInclude Include="model\scope_config.h">
       <Filter>Header Files\model</Filter>
+    </ClInclude>
+    <ClInclude Include="persist\filtered_adapter.h">
+      <Filter>Header Files\persist</Filter>
+    </ClInclude>
+    <ClInclude Include="persist\file_adapter\filtered_file_adapter.h">
+      <Filter>Header Files\persist\file_adapter</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
