feat: add management api tests and fix enforcer warnings.
Signed-off-by: DivyPatel9881 <divy9881@gmail.com>

--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="test_enforcer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_management_api.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
