feat: Add RBAC API with Domains tests.
Signed-off-by: DivyPatel9881 <divy9881@gmail.com>

--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="test_rbac_api.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_rbac_api_with_domains.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
