--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="test_util_channel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_enforcer_synced.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
