fix: ticker filepath in VS project files
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/casbin/casbin.vcxproj.filters
+++ b/casbin/casbin.vcxproj.filters
@@ -171,7 +171,7 @@
     <ClCompile Include="util\array_equals.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
-    <ClCompile Include="util\timer.cpp">
+    <ClCompile Include="util\ticker.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="util\array_remove_duplicates.cpp">
