--- a/casbin/casbin.vcxproj.filters
+++ b/casbin/casbin.vcxproj.filters
@@ -258,6 +258,9 @@
     <ClCompile Include="ip_parser\exception\parser_exception.cpp">
       <Filter>Source Files\ip_parser\exception</Filter>
     </ClCompile>
+    <ClCompile Include="enforcer_synced.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config\config_interface.h">
@@ -474,7 +477,7 @@
       <Filter>Header Files\ip_parser\exception</Filter>
     </ClInclude>
     <ClInclude Include="enforcer_synced.h">
-       <Filter>Header Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="util\ticker.h">
       <Filter>Header Files</Filter>
