feat: Modern constructor for shared_ptr
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

feat: Added logger and function definitions

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

fix: Fixed build errors on unix

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

fix: Logger path

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

fix: include error

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

feat: Added dummy definitions

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

fix: Fixed errors

fix: final fix for UNIX systems

Signed-off-by: EmperorYP7 <yash.btech.cs19@iiitranchi.ac.in>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ if(NOT DEFINED CMAKE_OBJECT_PATH_MAX)
     set(CMAKE_OBJECT_PATH_MAX 300)
 endif()
 
-set(CMAKE_CXX_STANDARD 11)
+# Setting to C++ standard to C++17
+set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(casbin)
