--- a/casbin/CMakeLists.txt
+++ b/casbin/CMakeLists.txt
@@ -7,9 +7,16 @@ include_directories(${CMAKE_SOURCE_DIR}/casbin)
 
 target_precompile_headers(casbin PUBLIC "pch.h")
 
+set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
+
 set_target_properties(casbin PROPERTIES PREFIX "")
 if(WIN32 OR MSVC)
     set_target_properties(casbin PROPERTIES SUFFIX ".lib")
 elseif(UNIX)
     set_target_properties(casbin PROPERTIES SUFFIX ".a")
 endif()
+
+install(
+    TARGETS casbin
+    DESTINATION lib
+)
