--- a/casbin/CMakeLists.txt
+++ b/casbin/CMakeLists.txt
@@ -1,4 +1,16 @@
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+#  Copyright 2020 The casbin Authors. All Rights Reserved.
+#
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
 
 FILE(GLOB_RECURSE SRC_FILES "*.cpp" "*.h")
 
@@ -19,4 +31,10 @@ endif()
 install(
     TARGETS casbin
     DESTINATION lib
+)
+
+install(
+    DIRECTORY ${CMAKE_SOURCE_DIR}/casbin
+    DESTINATION ${CMAKE_SOURCE_DIR}/lib
+    FILES_MATCHING PATTERN "*.h"
 )
