--- a/casbin/CMakeLists.txt
+++ b/casbin/CMakeLists.txt
@@ -35,6 +35,6 @@ install(
 
 install(
     DIRECTORY ${CMAKE_SOURCE_DIR}/casbin
-    DESTINATION ${CMAKE_SOURCE_DIR}/lib
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     FILES_MATCHING PATTERN "*.h"
 )
