feat: Initiated benchmark workflow (#114)
* feat: Added benchmarking

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

* feat: Added build test option

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

* fix: removed overhead

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

* feat: added GitHub Actions for benchmark

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

* fix: Updated to Release config

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

* fix: updated CopyRight

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

* fix: Added 2021 copyright

Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,12 +48,18 @@ endif()
 ###############################################################################
 # Global CMake options.
 
+option(CASBIN_BUILD_TEST "State whether to build test" ON)
+option(CASBIN_BUILD_BENCHMARK "State whether to build benchmarks" ON)
+
 # Do not output install messages.
 if(NOT DEFINED CMAKE_INSTALL_MESSAGE)
     set(CMAKE_INSTALL_MESSAGE "NEVER")
 endif()
 
-enable_testing()
+if(CASBIN_BUILD_TEST)
+    enable_testing()
+endif()
+
 add_subdirectory(tests)
 
 # Change the path max size to avoid problem on Windows.
