--- a/tests/benchmarks/CMakeLists.txt
+++ b/tests/benchmarks/CMakeLists.txt
@@ -12,37 +12,15 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-if(CASBIN_BUILD_TEST)
-  set(CMAKE_CXX_STANDARD 17)
-
-add_executable(
-  casbintest
-  built_in_functions_test.cpp
-  config_test.cpp
-  enforcer_test.cpp
-  enforcer_cached_test.cpp
-  enforcer_synced_test.cpp
-  management_api_test.cpp
-  model_enforcer_test.cpp
-  model_test.cpp
-  rbac_api_with_domains_test.cpp
-  rbac_api_test.cpp
-  role_manager_test.cpp
-  util_test.cpp
+add_executable(casbin_benchmark
+    main.cpp
+    enforcer_cached_b.cpp
 )
 
-  target_include_directories(casbintest PUBLIC ${CMAKE_SOURCE_DIR})
+target_include_directories(casbin_benchmark PUBLIC ${CMAKE_SOURCE_DIR})
 
-  target_link_libraries(
-    casbintest
-    gtest_main
+target_link_libraries(
+    casbin_benchmark
+    benchmark
     casbin
-  )
-
-  include(GoogleTest)
-  gtest_discover_tests(casbintest)
-endif()
-
-if(CASBIN_BUILD_BENCHMARK)
-  add_subdirectory(benchmarks)
-endif()
+)
