test: Benchmarks for ManagementAPI
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/tests/benchmarks/CMakeLists.txt
+++ b/tests/benchmarks/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(casbin_benchmark
     config_path.h
     main.cpp
     enforcer_cached_b.cpp
+    management_api_b.cpp
 )
 
 target_include_directories(casbin_benchmark PUBLIC ${CMAKE_SOURCE_DIR})
