feat: added model_b.cpp to build system
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/tests/benchmarks/CMakeLists.txt
+++ b/tests/benchmarks/CMakeLists.txt
@@ -15,6 +15,7 @@
 add_executable(casbin_benchmark
     config_path.h
     main.cpp
+    model_b.cpp
     enforcer_cached_b.cpp
     management_api_b.cpp
     role_manager_b.cpp
