feat: Added CI for python bindings
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -69,3 +69,7 @@ target_link_libraries(pycasbin
         casbin
 )
 
+install(
+    TARGETS pycasbin
+    DESTINATION ${CMAKE_SOURCE_DIR}/tests/python
+)
