feat: Added bindings for synced enforcer
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -18,7 +18,9 @@ set(SOURCES
     py_enforcer.cpp
     py_abac_data.cpp
     py_model.cpp
-        py_config.cpp)
+    py_config.cpp
+    py_synced_enforcer.cpp
+)
 
 set(HEADERS
     py_casbin.h
